package tsn_java_oop_teacher; // Имя нашего пакета

/**
 * Интерфейс "Программист"
 *
 * @author Талипов С.Н.
 */
public interface IProgrammer {

    /**
     * Метод "Разработка ПО/Сайта"
     */
    void development();
}
