package tsn_java_oop_teacher; // Имя нашего пакета

/**
 * Интерфейс "Преподаватель"
 *
 * @author Талипов С.Н.
 */
public interface ITeach {

    /**
     * Метод "обучить студентов"
     */
    void teachStudents();
}
